fix(GameResult): 게임 결과 반환 시 플레이어 순서가 섞이는 버그 수정
- Map.copyOf() 사용 시 LinkedHashMap의 순서가 보장되지 않는 문제 해결
- 순서를 유지하면서 불변성을 보장하도록 Collections.unmodifiableMap()으로 변경